# clash-verge-rev

./: .clippy.toml  .crowdin.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .tool-versions  .ts-unused-exports.json  .unimportedrc.json  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHANGELOG.txt  CLERK_SETUP_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  Makefile.toml  README.md  README_ru.md  TODO.md  UPDATELOG.md  biome.json  crowdin.yml  dead-code-report.md  deno.json  deny.toml  env-setup.txt  eslint.config.js  eslint.config.mjs  eslint.config.ts  imports.json  index.html  lint-staged.config.js  lint-staged.config.mjs  new.txt  package-lock.json  (+18 more)
crates/clash-verge-draft/: Cargo.toml
crates/clash-verge-draft/bench/: benche_me.rs
crates/clash-verge-draft/src/: lib.rs
crates/clash-verge-draft/tests/: test_me.rs
crates/clash-verge-signal/: Cargo.toml
crates/clash-verge-signal/src/: lib.rs  unix.rs  windows.rs
crates/tauri-plugin-clash-verge-sysinfo/: Cargo.toml
crates/tauri-plugin-clash-verge-sysinfo/src/: commands.rs  lib.rs
crates/tauri-plugin-mihomo/: .env  .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js  rustfmt.toml
crates/tauri-plugin-mihomo/dist-js/: index.cjs  index.d.ts  index.js
crates/tauri-plugin-mihomo/guest-js/: index.ts
crates/tauri-plugin-mihomo/permissions/: default.toml
crates/tauri-plugin-mihomo/src/: commands.rs  error.rs  ipc.rs  ipc_request.rs  lib.rs  mihomo.rs  models.rs  utils.rs  wrap_stream.rs
crates/tauri-plugin-mihomo/tests/: common_test.rs  connection_test.rs  group_test.rs  proxy_test.rs  rule_test.rs  upgrade_test.rs  websocket_test.rs
mihomo-rule-parser/: Cargo.toml  LICENSE
mihomo-rule-parser/src/: bitmap.rs  classical.rs  domain.rs  error.rs  ipcidr.rs  lib.rs  utils.rs
mihomo_api/: .gitignore  Cargo.toml  README.md
mihomo_api/src/: lib.rs  model.rs  websocket_client.rs
mihomo_api/src/api/: connections.rs  group.rs  mod.rs  providers.rs  proxies.rs  rules.rs  runtime_config.rs  upgrade.rs
mihomo_api/tests/: connections_test.rs  group_test.rs  providers_test.rs  proxies_test.rs  rules_test.rs  runtime_config_test.rs  upgrade_test.rs  websockets_test.rs
mihomo_api/tests/utils/: mod.rs
mihomo_rule_parser/: .gitignore  Cargo.toml
mihomo_rule_parser/src/: bitmap.rs  classical.rs  domain.rs  error.rs  ipcidr.rs  lib.rs  utils.rs
src-tauri/: .gitignore  Cargo.toml  Cross.toml  Info.plist  build.rs  package.json  pnpm-lock.yaml  rustfmt.toml  tauri.alpha.json  tauri.ci.linux.conf.json  tauri.conf.json  tauri.diff.json  tauri.linux.conf.json  tauri.linux.conf.local.json  tauri.macos.conf.json  tauri.meta.json  tauri.windows.conf.json  test_conn.rs  webview2.arm64.json  webview2.x64.json  webview2.x86.json
src-tauri/benches/: draft_benchmark.rs
src-tauri/capabilities/: desktop-windows.json  desktop.json  migrated.json  splashscreen.json
src-tauri/crates/clash-verge-logging/: Cargo.toml
src-tauri/crates/draft/: Cargo.toml
src-tauri/icons/: icon-new.icns  icon.icns
src-tauri/locales/: ar.yml  de.yml  en.yml  es.yml  fa.yml  id.yml  jp.yml  ko.yml  ru.yml  tr.yml  tt.yml  zh.yml  zhtw.yml
src-tauri/resources/: config_tmp.yaml  item_tmp.yaml  profiles_tmp.yaml  verge_tmp.yaml
src-tauri/src/: clash.rs  cmd.rs  cmds.rs  constants.rs  error.rs  feat.rs  import.rs  init.rs  lib.rs  main.rs  profiles.rs  states.rs  sysopt.rs
src-tauri/src/cache/: mihomo.rs  mod.rs
src-tauri/src/cmd/: app.rs  app_traffic.rs  backup.rs  clash.rs  core.rs  frontend.rs  lighteweight.rs  lightweight.rs  media_unlock_checker.rs  mod.rs  network.rs  profile.rs  profile_switch.rs  proxy.rs  runtime.rs  save_profile.rs  service.rs  sysproxy_helper.rs  system.rs  tray.rs  updater.rs  uwp.rs  validate.rs  verge.rs  webdav.rs
src-tauri/src/cmds/: backup.rs  clash.rs  common.rs  mod.rs  profile.rs  service.rs  some.rs  verge.rs
src-tauri/src/config/: clash.rs  config.rs  draft.rs  draft_new.rs  encrypt.rs  field.rs  groups.rs  merge.rs  mod.rs  operate.rs  prfitem.rs  profiles.rs  runtime.rs  script.rs  tun.rs  verge.rs
src-tauri/src/core/: async_proxy_query.rs  autostart.rs  backup.rs  clash copy.rs  clash.rs  clash_api.rs  core.rs  core_service.rs  enhance.rs  event_driven_proxy.rs  handle.rs  health_check.rs  hotkey.rs  logger.rs  manager.rs  mihomo.rs  mod.rs  multi.rs  network_monitor.rs  notice.rs  notification.rs  prfitem.rs  process_lock.rs  profiles.rs  service.rs  service_ipc.rs  sysopt.rs  sysproxy_helper.rs  sysproxy_helper_bridge.rs  timer.rs  traffic.rs  traffic_manager.rs  tray.rs  updater.rs  validate.rs  verge.rs  verge_log.rs  win_service.rs  win_uwp.rs
src-tauri/src/crate_mihomo_api/: Cargo.toml
src-tauri/src/data/: clash.rs  mod.rs  prfitem.rs  profiles.rs  verge.rs
src-tauri/src/enhance/: chain.rs  field.rs  merge.rs  mod.rs  script.rs  seq.rs  tun.rs
src-tauri/src/error/: mod.rs
src-tauri/src/events/: emit.rs  mod.rs  state.rs
src-tauri/src/feat/: app_traffic.rs  backup.rs  clash.rs  config.rs  icon.rs  lightweight.rs  mod.rs  profile.rs  proxy.rs  window.rs
src-tauri/src/ipc/: general.rs  logs.rs  memory.rs  mod.rs  monitor.rs  traffic.rs
src-tauri/src/locales/: en.yml  zh.yml
src-tauri/src/mcp/: handlers.rs  mod.rs  (+4 more)
src-tauri/template/: clash-verge.desktop  installer-hooks.nsh  installer.nsi
tauri-plugin-mihomo/: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
tauri-plugin-mihomo/dist-js/: index.cjs  index.d.ts  index.js
tauri-plugin-mihomo/guest-js/: index.ts
tauri-plugin-mihomo/permissions/: default.toml
tauri-plugin-mihomo/src/: commands.rs  enhance_request.rs  error.rs  ipc_request.rs  lib.rs  mihomo.rs  models.rs  named_pipe.rs  unix_sock.rs  utils.rs  ws_frame.rs  ws_utils.rs
tauri-plugin-mihomo/tests/: common_test.rs  group_test.rs  proxy_test.rs  rule_test.rs  upgrade_test.rs  websocket_test.rs
verge-firewall/: Cargo.toml  build.rs  manifest.xml
verge-firewall/src/: main.rs
(+1344 files in other folders)
