[package]
name = "mihomo-rule-parser"
version = "0.1.0"
edition = "2021"
authors = ["oomeow"]
description = "Mihomo Rule Parser"

[lib]
name = "mihomo_rule_parser"

[dependencies]
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
zstd = "0.13"
