[package]
name = "mihomo-api"
version = "0.1.0"
edition = "2021"
authors = ["oomeow"]
description = "Mihomo Api"
license = "MIT"
keywords = ["mihomo", "clash", "clash-meta"]
repository = "https://github.com/oomeow/mihomo-api"

[lib]
name = "mihomo_api"

[features]
default = []
# 此功能未完善
websocket = ["tokio-tungstenite", "futures-util"]

[dependencies]
anyhow = "1.0.89"
futures-util = { optional = true, version = "0.3.30" }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { optional = true, version = "0.26.0", features = [
    "rustls",
    "native-tls",
] }

[[test]]
name = "websockets_test"
path = "tests/websockets_test.rs"
required-features = ["websocket"]
