[package]
name = "tauri-plugin-mihomo"
version = "0.1.0"
authors = ["oomeow"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mihomo"

[dependencies]
tauri = { version = "2.3.1" }
thiserror = "2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "=1.44.0", features = ["full"] }

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
