[package]
name = "tauri-plugin-mihomo"
version = "0.1.0"
authors = ["oomeow"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mihomo"

[dependencies]
tauri = { version = "2.3.1" }
thiserror = "2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3"
tokio = { version = "1", features = ["net", "sync", "macros"] }
tokio-tungstenite = { version = "0.26" }
rand = "0.9.0"
http = "1.3.1"
base64 = "0.22.1"
anyhow = "1.0.98"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.59.0"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
