[package]
name = "clash-verge-signal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri = { workspace = true }
clash-verge-logging = { workspace = true }
log = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.18"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
] }


[lints]
workspace = true
