[package]
name = "tauri-plugin-clash-verge-sysinfo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
parking_lot = { workspace = true }
sysinfo = { version = "0.37.2", features = ["network", "system"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.177"

[target.'cfg(windows)'.dependencies]
deelevate = { workspace = true }

[lints]
workspace = true
