[package]
name = "tauri-plugin-mihomo"
version = "0.1.0"
authors = ["oomeow"]
description = "http or ipc api for mihomo"
edition = "2024"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mihomo"

[dependencies]
tauri = { version = "2" }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["net", "sync", "macros"] }
tokio-tungstenite = { version = "0.28" }
rand = "0.9"
http = "1.3"
base64 = "0.22"
httparse = "1.10"
log = "0.4"
urlencoding = "2.1"
ts-rs = "11.0"
pin-project = "1.1.10"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.59"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dev-dependencies]
dotenvy = "=0.15.7"
