[package]
name = "check-mihomo-api"
version = "0.1.0"
description = "A Tauri App to test Mihomo api"
authors = ["oomeow"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mihomo_api_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
formatjson = "0.3.1"
tauri = { version = "2", features = [] }
tauri-plugin-mihomo = { path = "../../../" }
